Fixing up spacing differences between page and regular annotations. Also fixing private lock.

--- a/public/stylesheets/DV/components/annotations.css
+++ b/public/stylesheets/DV/components/annotations.css
@@ -297,7 +297,7 @@
   .DV-annotationAuthor {
     float: right;
     color: #999;
-    padding: 6px 0 0;
+    padding: 10px 0 0;
     line-height: 14px;
     font-size: 10px;
   }
