--- a/public/stylesheets/DV/themes/plain.css
+++ b/public/stylesheets/DV/themes/plain.css
@@ -38,7 +38,7 @@
     padding-top: 1px; /* needed to uncollapse the margin */
   }
 
-.DV-privateLock, .DV-showEdit, .DV-permalink {
+.DV-showEdit, .DV-permalink {
   width: 16px; height: 16px;
   float: left;
   margin: -2px 0 0 10px;
@@ -47,7 +47,10 @@
   cursor: pointer;
 }
 .DV-privateLock {
-    margin: -2px 6px 0 0;
+  width: 16px; height: 16px;
+  float: left;
+  margin: -2px 6px 0 0;
+  background-repeat: no-repeat;
 }
 
 .DV-permalink {
